# LlamaForge

./: .gitignore  AUTOMATIC_OLLAMA_CREATION.md  CPU_OPTIMIZATION_GUIDE.md  DATASETS_READY.txt  DATASET_GUIDE.md  DATASET_STRATEGY_GUIDE.md  DIRECTORY_BROWSING.md  DISTRIBUTED_TRAINING_GUIDE.md  DISTRIBUTED_TRAINING_SOLLOL.md  EVALUATION_GUIDE.md  KNOWN_ISSUES.md  Modelfile  OLLAMA_INTEGRATION.md  QUICKSTART.md  QUICK_START_COT_TRAINING.md  RAM_ESTIMATION_FEATURE.md  README.md  README_COMPLETE_SYSTEM.md  REASONING_TRAINING_GUIDE.md  SETUP_COMPLETE.md  SOLLOL_INTEGRATION.md  SYSTEMD_SERVICE_SETUP.md  TEACHER_STUDENT_GUIDE.md  TECHNICAL_REALITY.md  TRAINING_EXECUTION_GUIDE.md  ULTIMATE_3M_GUIDE.md  USE_OLLAMA_NOW.md  create_3m_ultimate_dataset.sh  create_3m_with_duplication.py  create_cot_tot_dataset.py  create_ultimate_reasoning_dataset.sh  dataset_manifest.json  dataset_manifest.py  download_code_datasets.py  download_cot_tot_datasets.py  download_datasets.py  download_debugging_datasets.py  evaluate_model.py  evaluate_reasoning.py  expanded_manifest.json  (+12 more)
.github/workflows/: ci.yml
examples/: README.md
examples/datasets/: README.md  alpaca_1k.jsonl  code_generation.jsonl  instruction_following.jsonl  qa_pairs.json  sentiment.csv
examples/distributed/: peft_methods_example.py  teacher_student_example.py
src/: __init__.py  dataset_loader.py  gguf_converter.py  gguf_extractor.py  lora_trainer.py  ollama_gguf_loader.py  ollama_utils.py  sollol_integration.py  sollol_node.py
testtraindata/: README.md  practical_coding.jsonl
work/training/lora_adapter/: adapter_config.json
