[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llamaforge"
version = "0.1.0"
authors = [
    {name = "BenevolentJoker-JohnL", email = "benevolentjoker@gmail.com"}
]
description = "Experimental LoRA fine-tuning pipeline for LLMs with Ollama integration and distributed training support"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
keywords = [
    "llm",
    "fine-tuning",
    "lora",
    "peft",
    "distributed-training",
    "ollama",
    "gguf",
    "pytorch",
    "transformers",
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "datasets>=2.14.0",
    "peft>=0.7.0",
    "accelerate>=0.24.0",
    "sentencepiece>=0.1.99",
    "protobuf>=3.20.0",
    "bitsandbytes>=0.41.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]
distributed = [
    "sollol>=0.9.60",
]

[project.urls]
Homepage = "https://github.com/BenevolentJoker-JohnL/LlamaForge"
Documentation = "https://github.com/BenevolentJoker-JohnL/LlamaForge#readme"
Repository = "https://github.com/BenevolentJoker-JohnL/LlamaForge"
"Bug Tracker" = "https://github.com/BenevolentJoker-JohnL/LlamaForge/issues"

[project.scripts]
llamaforge = "llamaforge:main"
llamaforge-interactive = "llamaforge_interactive:main"
llamaforge-distributed = "launch_distributed_training_direct:main"

[tool.setuptools]
packages = ["src"]
py-modules = [
    "llamaforge",
    "llamaforge_interactive",
    "llamaforge_node",
    "launch_distributed_training",
    "launch_distributed_training_direct",
    "evaluate_model",
    "evaluate_reasoning",
    "train_and_eval",
    "simple_dashboard",
    "dataset_manifest",
    "download_code_datasets",
    "download_cot_tot_datasets",
    "download_debugging_datasets",
    "create_cot_tot_dataset",
    "create_3m_with_duplication",
]

[tool.setuptools.package-data]
"*" = ["*.md", "*.yaml", "*.yml", "*.json", "*.jsonl", "*.sh", "LICENSE"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
  | \.egg-info
  | work
  | test_work
  | test_8bit
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
